# cvip

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Jenkinsfile  README.rst  azure-pipelines.yml  cxb.config.js  jest.config.js  package-lock.json  package.json  webpack.config.js
binding/cvip/: cv.cpp  cv.h  cvip.cpp  cvip.h  index.cpp
binding/generate/: CMakeLists.txt
binding/generate/src/: CMakeLists.txt
binding/src/: CMakeLists.txt  binding.h
binding/src/camera/: camera.cpp  camera.h
binding/src/cvip/: cvip.cpp
ci/: install.yml  node_x64.yml  node_x86.yml
example/: camera.ts  stream.ts
generate/: CMakeLists.txt
generate/binding/: CMakeLists.txt
generate/src/: CMakeLists.txt
modules/: copy.js  index.js  package-lock.json  package.json  rollup.config.js  rollup.dev.js  tsconfig.json
modules/cv/: index.js
modules/cvip/: index.js  index.ts  tsconfig.json
modules/fb/: index.js
modules/img/: index.js
modules/src/: index.ts
modules/test/: camera.test.ts
src/: binding.cpp  bindings.ts  camera.ts  image.ts  index.cpp  index.ts
src/cvip/: cvip.h
src/fb/: scut.cpp  scut.h
src/img/: fb.cpp  fb.h  fb2png.c  fb2png.h  png.cpp  png.h
src/node/: CMakeLists.txt  camera.cpp  cv.cpp  cvip.cpp  cvip.h  index.cpp
src/passoa/: CMakeLists.txt  binding.cpp  camera.cpp  cv.h  index.cpp
test/: camera.spec.ts  camera.test.ts  image.spec.ts  test.js
